just commit to do something new

--- a/New_version/templates/IT/Invoice/Invoice_Print.html
+++ b/New_version/templates/IT/Invoice/Invoice_Print.html
@@ -9,7 +9,7 @@
         <!-- Fav Icon  -->
         <link rel="shortcut icon" href="static/base/images/favicon.png" />
         <!-- Page Title  -->
-        <title>چاپ فاکتور | قالب مدیریتی دش‌لایت</title>
+        <title>PRINT</title>
         <!-- StyleSheets  -->
         <link rel="stylesheet" href="static/base/assets/css/dashlite.rtl.css" />
         <link id="skin-default" rel="stylesheet" href="static/base/assets/css/theme.css" />
