update all pages menu

--- a/New_version/templates/IT/Ticket/ticket_add.html
+++ b/New_version/templates/IT/Ticket/ticket_add.html
@@ -208,6 +208,19 @@
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
+                                    <li class="nk-menu-item has-sub">
+                                        <a href="/IT/Tickets" class="nk-menu-link nk-menu-toggle">
+                                            <span class="nk-menu-icon"><em class="icon ni ni-chat-circle"></em></span>
+                                            <span class="nk-menu-text">تیکت ها</span>
+                                        </a>
+                                        <ul class="nk-menu-sub">
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/Tickets" class="nk-menu-link"><span class="nk-menu-text">تیکت ها</span></a>
+                                            </li>
+
+                                        </ul>
+                                        <!-- .nk-menu-sub -->
+                                    </li>
 
                                     <!-- .nk-menu-item -->
 
