--- a/New_version/templates/IT/Product_list/index.html
+++ b/New_version/templates/IT/Product_list/index.html
@@ -247,17 +247,28 @@
 
                                     <!-- .nk-menu-item -->
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/IT/Data_grab_DG" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/IT/getdata" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-tranx"></em></span>
                                             <span class="nk-menu-text">جمع آوری دیتا</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Data_grab_TO" class="nk-menu-link"><span class="nk-menu-text">ترب</span></a>
+                                                <a href="/IT/getdata" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
                                             </li>
+
+                                        </ul>
+                                        <!-- .nk-menu-sub -->
+                                    </li>
+                                    <li class="nk-menu-item has-sub">
+                                        <a href="/IT/Tickets" class="nk-menu-link nk-menu-toggle">
+                                            <span class="nk-menu-icon"><em class="icon ni ni-chat-circle"></em></span>
+                                            <span class="nk-menu-text">تیکت ها</span>
+                                        </a>
+                                        <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Data_grab_DG" class="nk-menu-link"><span class="nk-menu-text">دیجیکالا</span></a>
+                                                <a href="/IT/Tickets" class="nk-menu-link"><span class="nk-menu-text">تیکت ها</span></a>
                                             </li>
+
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
