update pages invoice in IT section and update text and view

--- a/New_version/templates/IT/Invoice/Invoice_Print.html
+++ b/New_version/templates/IT/Invoice/Invoice_Print.html
@@ -36,7 +36,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="invoice-desc">
-                                                        <h3 class="title">پیش فاکتور ها</h3>
+                                                        <h3 class="title">فاکتور</h3>
                                                         <ul class="list-plain">
                                                             <li class="invoice-id"><span>شناسه فاکتور داخلی</span>:<span>{{pre_invoice_data[0][1]}}</span></li>
                                                             <li class="invoice-date"><span>{{pre_invoice_lookup[0][7]}}</span></li>
@@ -92,9 +92,7 @@
                                                                 </tr>
                                                             </tfoot>
                                                         </table>
-                                                        <div class="nk-notes ff-italic fs-12px text-soft">
-                                                            فاکتور در کامپیوتر ایجاد شده است و بدون امضا و مهر معتبر است.
-                                                        </div>
+
                                                     </div>
                                                 </div>
                     <div class="invoice-brand text-center">
