--- a/New_version/templates/IT/Invoice/Invoice_details.html
+++ b/New_version/templates/IT/Invoice/Invoice_details.html
@@ -53,7 +53,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="invoice-desc">
-                                                        <h3 class="title">پیش فاکتور ها</h3>
+                                                        <h3 class="title">فاکتور</h3>
                                                         <ul class="list-plain">
                                                             <li class="invoice-id"><span>شناسه فاکتور داخلی</span>:<span>{{pre_invoice_data[0][1]}}</span></li>
                                                             <li class="invoice-date"><span>{{pre_invoice_lookup[0][7]}}</span></li>
