--- a/New_version/templates/IT/Invoice/index.html
+++ b/New_version/templates/IT/Invoice/index.html
@@ -8,7 +8,7 @@
                                     <div class="nk-block-head nk-block-head-sm">
                                         <div class="nk-block-between">
                                             <div class="nk-block-head-content">
-                                                <h3 class="nk-block-title page-title">پیش فاکتور ها</h3>
+                                                <h3 class="nk-block-title page-title">فاکتور ها</h3>
                                             </div>
                                             <!-- .nk-block-head-content -->
                                             <div class="nk-block-head-content">
@@ -33,7 +33,7 @@
                                                         <div class="nk-tb-item nk-tb-head">
 
                                                             <div class="nk-tb-col tb-col-sm">
-                                                                <span>شماره پیش فاکتور</span>
+                                                                <span>شماره فاکتور</span>
                                                             </div>
                                                             <div class="nk-tb-col"><span>خریدار</span></div>
                                                             <div class="nk-tb-col"><span>فروشنده</span></div>
@@ -42,23 +42,6 @@
                                                                 <span>وضعیت</span>
                                                             </div>
 
-                                                            <div class="nk-tb-col nk-tb-col-tools">
-                                                                <ul class="nk-tb-actions gx-1 my-n1">
-                                                                    <li class="me-n1">
-                                                                        <div class="dropdown">
-                                                                            <a href="#" class="dropdown-toggle btn btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
-                                                                            <div class="dropdown-menu dropdown-menu-end">
-                                                                                <ul class="link-list-opt no-bdr">
-                                                                                    <li>
-                                                                                        <a href="/IT/Pre_invoice_add"><em class="icon ni ni-edit"></em><span>افزودن جدید</span></a>
-                                                                                    </li>
-
-                                                                                </ul>
-                                                                            </div>
-                                                                        </div>
-                                                                    </li>
-                                                                </ul>
-                                                            </div>
                                                         </div>
                                                         <!-- .nk-tb-item -->
                                                         {% for i in pre_invoice_list%}
@@ -97,88 +80,7 @@
                                         </div>
                                     </div>
                                     <!-- .nk-block -->
-                                    <div class="nk-add-product toggle-slide toggle-slide-right" data-content="addProduct" data-toggle-screen="any" data-toggle-overlay="true" data-toggle-body="true" data-simplebar>
-                                        <div class="nk-block-head">
-                                            <div class="nk-block-head-content">
-                                                <h5 class="nk-block-title">محصول جدید</h5>
-                                                <div class="nk-block-des">
-                                                    <p>محصول جدید و اطلاعات آن را اضافه کنید.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- .nk-block-head -->
-                                        <div class="nk-block">
-                                            <div class="row g-3">
-                                                <div class="col-12">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="product-title">عنوان محصول</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="text" class="form-control" id="product-title" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="regular-price">قیمت عادی</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="number" class="form-control" id="regular-price" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="sale-price">قیمت فروش</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="number" class="form-control" id="sale-price" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="stock">موجودی</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="text" class="form-control" id="stock" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="SKU">شناسه محصول</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="text" class="form-control" id="SKU" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-12">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="category">دسته بندی</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="text" class="form-control" id="category" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-12">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="tags">برچسب</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="text" class="form-control" id="tags" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-12">
-                                                    <div class="upload-zone small bg-lighter my-2">
-                                                        <div class="dz-message">
-                                                            <span class="dz-message-text">فایل را بکشید و رها کنید</span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-12">
-                                                    <button class="btn btn-primary"><em class="icon ni ni-plus"></em><span>افزودن جدید</span></button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- .nk-block -->
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
