updated main page or index page of IT section with tickets and factors

--- a/New_version/templates/IT/Invoice/Invoice_details.html
+++ b/New_version/templates/IT/Invoice/Invoice_details.html
@@ -29,7 +29,7 @@
                                     <div class="nk-block">
                                         <div class="invoice">
                                             <div class="invoice-action">
-                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-primary" href="IT/invoice_print_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-printer-fill"></em></a>
+                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-primary" href="/IT/invoice_print_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-printer-fill"></em></a>
 
                                             </div>
                                             <!-- .invoice-actions -->
