updated some views html templates

--- a/New_version/templates/IT/index.html
+++ b/New_version/templates/IT/index.html
@@ -118,8 +118,9 @@
                                                                 </div>
                                                                 <div class="nk-tb-col tb-col-sm">
                                                                     <div class="user-card">
-                                                                        <div class="user-avatar user-avatar-sm bg-purple">
-                                                                            <span>{{i[1]}}</span>
+                                                                        <div class="user-avatar user-avatar-sm bg-info">
+                                                                            <em class="icon ni ni-user-alt"></em>
+
                                                                         </div>
                                                                         <div class="user-name">
                                                                             <span class="tb-lead">{{i[9]}}</span>
