clear space between mehtode that in main.py file

--- a/New_version/templates/IT/Invoice/index.html
+++ b/New_version/templates/IT/Invoice/index.html
@@ -54,7 +54,12 @@
                                                                 </span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-sub">{{i[9]}}</span>
+                                                                <div class="user-card">
+                                                                <div class="user-avatar user-avatar-sm bg-info">
+                                                                    <em class="icon ni ni-user-alt"></em>
+                                                                </div>
+                                                                <span class="tb-lead">{{i[9]}}</span>
+                                                                </div>
                                                             </div>
                                                             <div class="nk-tb-col">
                                                                 <span class="tb-lead">{{i[8]}}</span>
