--- a/New_version/templates/ACC/Invoice/Invoice_Print.html
+++ b/New_version/templates/ACC/Invoice/Invoice_Print.html
@@ -19,19 +19,21 @@
         <div class="nk-block">
             <div class="invoice invoice-print">
                 <div class="invoice-wrap">
-
+                                                <div class="invoice-brand text-center">
+                                                    <img src="./images/logo-dark.png" srcset="./images/logo-dark2x.png 2x" alt="" />
+                                                </div>
                                                 <div class="invoice-head">
                                                     <div class="invoice-contact">
                                                         <span class="overline-title">فاکتور به </span>
                                                         <div class="invoice-contact-info">
-                                                            <h4 class="title">{{customer_details[0][5]}}</h4>
+                                                            <h4 class="title">{{customer_details[0][1]}}</h4>
                                                             <ul class="list-plain">
                                                                 <li>
                                                                     <em class="icon ni ni-map-pin-fill"></em>
-                                                                    <span>{{customer_details[0][14]}}
+                                                                    <span>{{customer_details[0][4]}}
                                                                     </span>
                                                                 </li>
-                                                                <li><em class="icon ni ni-call-fill"></em><span>{{customer_details[0][3]}}</span></li>
+                                                                <li><em class="icon ni ni-call-fill"></em><span>{{customer_details[0][8]}}</span></li>
                                                             </ul>
                                                         </div>
                                                     </div>
@@ -92,14 +94,13 @@
                                                                 </tr>
                                                             </tfoot>
                                                         </table>
-
+                                                        <div class="nk-notes ff-italic fs-12px text-soft">
+                                                            فاکتور در کامپیوتر ایجاد شده است و بدون امضا و مهر معتبر است.
+                                                        </div>
                                                     </div>
                                                 </div>
-                    <div class="invoice-brand text-center">
-                        <img src="static/images_mohr/mohr.png" srcset="static/images_mohr/mohr.png 2x" alt="" />
-                    </div>
-                    <!-- .invoice-bills -->
-                </div>
+                                                <!-- .invoice-bills -->
+                                            </div>
                 <!-- .invoice-wrap -->
             </div>
             <!-- .invoice -->
