--- a/New_version/templates/ACC/Invoice/Invoice_details.html
+++ b/New_version/templates/ACC/Invoice/Invoice_details.html
@@ -29,17 +29,9 @@
                                     <div class="nk-block">
                                         <div class="invoice">
                                             <div class="invoice-action">
-                                                <div class="form-group">
-                                                <div class="form-control-wrap" data-search="on">
-                                                <select class="form-select" name="status">
-                                                    <option value="0">فرستاده شده</option>
-                                                    <option value="1">فرستاده نشده</option>
-                                                    <option value="2">عودت شده</option>
-                                                    <option value="3">باطل شده</option>
-                                                </select>
+
                                                 <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-primary" href="/ACC/invoice_print_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-printer-fill"></em></a>
-                                                </div>
-                                            </div>
+                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-success" href="/ACC/invoice_print_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-clipboad-check-fill"></em></a>
                                             </div>
                                             <!-- .invoice-actions -->
                                             <div class="invoice-wrap">
