creat section invoice_sended and it works

--- a/New_version/templates/ACC/index.html
+++ b/New_version/templates/ACC/index.html
@@ -237,6 +237,9 @@
                                             <li class="nk-menu-item">
                                                 <a href="/ACC/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
                                             </li>
+                                            <li class="nk-menu-item">
+                                                <a href="/ACC/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
+                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
