--- a/New_version/templates/ACC/Invoice_sended/Invoice_details.html
+++ b/New_version/templates/ACC/Invoice_sended/Invoice_details.html
@@ -20,8 +20,8 @@
                                                 </div>
                                             </div>
                                             <div class="nk-block-head-content">
-                                                <a href="/ACC/Pre_Invoice" class="btn btn-outline-light bg-white d-none d-sm-inline-flex"><em class="icon ni ni-arrow-left"></em><span>بازگشت</span></a>
-                                                <a href="/ACC/Pre_Invoice" class="btn btn-icon btn-outline-light bg-white d-inline-flex d-sm-none"><em class="icon ni ni-arrow-left"></em></a>
+                                                <a href="/ACC/Invoice" class="btn btn-outline-light bg-white d-none d-sm-inline-flex"><em class="icon ni ni-arrow-left"></em><span>بازگشت</span></a>
+                                                <a href="/ACC/Invoice" class="btn btn-icon btn-outline-light bg-white d-inline-flex d-sm-none"><em class="icon ni ni-arrow-left"></em></a>
                                             </div>
                                         </div>
                                     </div>
@@ -29,8 +29,12 @@
                                     <div class="nk-block">
                                         <div class="invoice">
                                             <div class="invoice-action">
-                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-primary" href="/ACC/pre_invoice_print_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-printer-fill"></em></a>
-                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-success" href="/ACC/preinvoice_to_invoice?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-clipboad-check-fill"></em></a>
+
+                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-primary" href="/ACC/invoice_print_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-printer-fill"></em></a>
+                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-success" href="/ACC/invoice_sended_inovice_section_okay?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-clipboad-check-fill"></em></a>
+                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-warning" href="/ACC/invoice_sended_inovice_section_back?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-repeat-fill"></em></a>
+                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-danger" href="/ACC/invoice_sended_inovice_section_remove?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-cross-round-fill"></em></a>
+
                                             </div>
                                             <!-- .invoice-actions -->
                                             <div class="invoice-wrap">
@@ -127,7 +131,7 @@
                     </div>
 {% endblock %}
 {% block menu %}
-                   <div class="nk-sidebar-content">
+                      <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
