delet newline between method in main file and clear it

--- a/New_version/templates/ACC/Invoice_sended/Invoice_details.html
+++ b/New_version/templates/ACC/Invoice_sended/Invoice_details.html
@@ -8,7 +8,7 @@
                                         <div class="nk-block-between g-3">
                                             <div class="nk-block-head-content">
                                                 <h3 class="nk-block-title page-title">
-                                                    فاکتور <strong class="text-primary small">شماره {{pre_invoice_data[0][1]}}</strong>
+                                                    فاکتور ارسال شده  <strong class="text-primary small">شماره {{pre_invoice_data[0][1]}}</strong>
                                                 </h3>
                                                 <div class="nk-block-des text-soft">
                                                     <ul class="list-inline">
