--- a/New_version/templates/IT/Customer/index_G.html
+++ b/New_version/templates/IT/Customer/index_G.html
@@ -208,6 +208,9 @@
                                             <li class="nk-menu-item">
                                                 <a href="/IT/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
                                             </li>
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
+                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
