--- a/New_version/templates/IT/Invoice/Invoice_sended.html
+++ b/New_version/templates/IT/Invoice/Invoice_sended.html
@@ -1,13 +1,14 @@
 {% extends './base/base.html' %}
 {% block bodys %}
-                    <div class="nk-content">
+
+                     <div class="nk-content">
                         <div class="container-fluid">
                             <div class="nk-content-inner">
                                 <div class="nk-content-body">
                                     <div class="nk-block-head nk-block-head-sm">
                                         <div class="nk-block-between">
                                             <div class="nk-block-head-content">
-                                                <h3 class="nk-block-title page-title">محصولات</h3>
+                                                <h3 class="nk-block-title page-title">فاکتور های ارسالی IT</h3>
                                             </div>
                                             <!-- .nk-block-head-content -->
                                             <div class="nk-block-head-content">
@@ -15,11 +16,6 @@
                                                     <a href="#" class="btn btn-icon btn-trigger toggle-expand me-n1" data-target="pageMenu"><em class="icon ni ni-more-v"></em></a>
                                                     <div class="toggle-expand-content" data-content="pageMenu">
                                                         <ul class="nk-block-tools g-3">
-                                                            <li class="nk-block-tools-opt">
-                                                                <a href="#" data-target="addProduct" class="toggle btn btn-icon btn-primary d-md-none"><em class="icon ni ni-plus"></em></a>
-                                                                <a href="#" data-target="addProduct" class="toggle btn btn-primary d-none d-md-inline-flex"><em class="icon ni ni-plus"></em><span>افزودن محصول</span></a>
-                                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-primary" href="IT/print_getdata_sction" target="_blank"><em class="icon ni ni-printer-fill"></em></a>
-                                                            </li>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -30,70 +26,74 @@
                                     </div>
                                     <!-- .nk-block-head -->
                                     <div class="nk-block">
-
                                         <div class="card card-bordered">
                                             <div class="card-inner-group">
                                                 <div class="card-inner p-0">
                                                     <div class="nk-tb-list">
                                                         <div class="nk-tb-item nk-tb-head">
-                                                            <div class="nk-tb-col tb-col-sm"><span>نام</span></div>
-                                                            <div class="nk-tb-col"><span>کد محصول</span></div>
-                                                            <div class="nk-tb-col"><span>ایمالز</span></div>
-                                                            <div class="nk-tb-col"><span>ترب</span></div>
-                                                            <div class="nk-tb-col"><span>دیجیکالا</span></div>
-                                                            <div class="nk-tb-col tb-col-md"><span>میانگین کل</span></div>
-                                                            <div class="nk-tb-col tb-col-md"><span>نوع</span></div>
-                                                            <div class="nk-tb-col tb-col-md"><span></span></div>
+
+                                                            <div class="nk-tb-col tb-col-sm">
+                                                                <span>شماره فاکتور</span>
+                                                            </div>
+                                                            <div class="nk-tb-col"><span>خریدار</span></div>
+                                                            <div class="nk-tb-col"><span>فروشنده</span></div>
+                                                            <div class="nk-tb-col"><span>تاریخ</span></div>
+                                                            <div class="nk-tb-col tb-col-md">
+                                                                <span>وضعیت</span>
+                                                            </div>
 
                                                         </div>
-                                                        {%for i in main_data%}
                                                         <!-- .nk-tb-item -->
+                                                        {% for i in pre_invoice_list%}
                                                         <div class="nk-tb-item">
 
                                                             <div class="nk-tb-col tb-col-sm">
                                                                 <span class="tb-product">
                                                                     <img src="./images/product/a.png" alt="" class="thumb" />
-                                                                    <span class="title"> {{i[0][1]}}</span>
+                                                                    <span class="title"><a href="/IT/Invoice_details?P_ID={{i[0]}}">{{i[0]}}</a></span>
                                                                 </span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-sub">{{i[0][0]}}</span>
+                                                                <div class="user-card">
+                                                                <div class="user-avatar user-avatar-sm bg-info">
+                                                                    <em class="icon ni ni-user-alt"></em>
+                                                                </div>
+                                                                <span class="tb-lead">{{i[9]}}</span>
+                                                                </div>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="{{i[0][2]}}"> {{i[1][0]}} تومان</a></span>
+                                                                <span class="tb-lead">{{i[8]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="https://torob.com/p/{{i[0][3]}}">{{i[2][0]}} تومان</a></span>
+                                                                <span class="tb-sub">{{i[7]}}</span>
                                                             </div>
-                                                            <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="https://www.digikala.com/product/dkp-{{i[0][4]}}/">{{i[3][0]}} تومان</a></span>
-                                                            </div>
-                                                            <div class="nk-tb-col">
-                                                                <span class="tb-sub">{{i[4][0]}} تومان</span>
-                                                            </div>
+                                                            {% if i[5] == 1: %}
                                                             <div class="nk-tb-col tb-col-md">
-                                                                <span class="tb-sub">{{i[0][6]}}</span>
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-warning">{{i[5]}}</span></span>
                                                             </div>
+                                                            {% endif %}
+                                                            {% if i[5] == 2: %}
+                                                            <div class="nk-tb-col tb-col-md">
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-warning">{{i[5]}}</span></span>
+                                                            </div>
+                                                            {% endif %}
+                                                            {% if i[5] == 3: %}
+                                                            <div class="nk-tb-col tb-col-md">
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-danger">{{i[5]}}</span></span>
+                                                            </div>
+                                                            {% endif %}
+                                                            {% if i[5] == 4: %}
+                                                            <div class="nk-tb-col tb-col-md">
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-success">{{i[5]}}</span></span>
+                                                            </div>
+                                                            {% endif %}
 
-                                                            <div class="nk-tb-col nk-tb-col-tools">
-                                                                <ul class="nk-tb-actions gx-1 my-n1">
-                                                                    <li class="me-n1">
-                                                                        <div class="dropdown">
-                                                                            <a href="#" class="dropdown-toggle btn btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
-                                                                            <div class="dropdown-menu dropdown-menu-end">
-                                                                                <ul class="link-list-opt no-bdr">
-                                                                                    <li>
-                                                                                        <a href="/IT/delet_linksgetdata?id={{i[0][0]}}"><em class="icon ni ni-trash"></em><span>حذف محصول</span></a>
-                                                                                    </li>
-                                                                                </ul>
-                                                                            </div>
-                                                                        </div>
-                                                                    </li>
-                                                                </ul>
-                                                            </div>
+
+
                                                         </div>
-                                                        <!-- .nk-tb-item -->
                                                         {%endfor%}
+                                                        <!-- .nk-tb-item -->
+
                                                         <!-- .nk-tb-item -->
                                                     </div>
                                                     <!-- .nk-tb-list -->
@@ -103,62 +103,7 @@
                                         </div>
                                     </div>
                                     <!-- .nk-block -->
-                                    <div class="nk-add-product toggle-slide toggle-slide-right" data-content="addProduct" data-toggle-screen="any" data-toggle-overlay="true" data-toggle-body="true" data-simplebar>
-                                        <div class="nk-block-head">
-                                            <div class="nk-block-head-content">
-                                                <h5 class="nk-block-title">محصول جدید</h5>
-                                                <div class="nk-block-des">
-                                                    <p>محصول جدید و اطلاعات آن را اضافه کنید.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- .nk-block-head -->
-                                        <div class="nk-block">
-                                            <form action="/IT/add_linksgetdata" method="get">
-                                                <div class="row g-3">
-                                                    <div class="col-12">
-                                                        <div class="form-group">
-                                                            <label class="form-label" for="product-title">عنوان محصول</label>
-                                                            <div class="form-control-wrap">
-                                                                <input type="text" class="form-control" id="product-title" name="name"/>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
 
-                                                            <label class="form-label" for="links_torob">آدرس ترب</label>
-                                                            <div class="form-control-wrap">
-                                                                <input type="text" name="link_torob" class="form-control" id="links_torob" placeholder="ترب : " />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
-                                                            <label class="form-label" for="links">آدرس ایمالز</label>
-                                                            <div class="form-control-wrap">
-                                                                <input type="text" name="link" class="form-control" id="links" placeholder="ایمالز : " />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
-                                                            <label class="form-label" for="link_dg">آدرس دیجیکالا</label>
-                                                            <div class="form-control-wrap">
-                                                                <input type="text" name="link_dg" class="form-control" id="link_dg" placeholder="دیجیکالا : " />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <hr>
-                                                    <div class="col-12">
-                                                        <input type="submit" class="btn btn-primary" value="ثبت"/>
-                                                    </div>
-
-                                                </div>
-                                            </form>
-                                        </div>
-                                        <!-- .nk-block -->
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +111,7 @@
 {% endblock %}
 
 {% block menu %}
-<div class="nk-sidebar-content">
+                           <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -270,7 +215,7 @@
 {% endblock %}
 
 {% block notification %}
-<li class="dropdown notification-dropdown me-n1">
+                        <li class="dropdown notification-dropdown me-n1">
                                             <a href="#" class="dropdown-toggle nk-quick-nav-icon" data-bs-toggle="dropdown">
                                                 <div class="icon-status icon-status-info">
                                                     <em class="icon ni ni-bell"></em>
@@ -359,3 +304,8 @@
                                             </div>
                                         </li>
 {% endblock %}
+
+
+
+
+
