i dont know why i shloud commit but something changed

--- a/New_version/templates/IT/Invoice/Invoice_details.html
+++ b/New_version/templates/IT/Invoice/Invoice_details.html
@@ -80,7 +80,7 @@
                                                                     <td>
                                                                         {{pre_invoice_data[i][14]}}
                                                                     </td>
-                                                                    <td>{{pre_invoice_data[i][6]}}  ریال</td>
+                                                                    <td>{{pre_invoice_data[i][6]*100/109}}  ریال</td>
                                                                     <td>{{pre_invoice_data[i][3]}}</td>
                                                                     <td>{{pre_invoice_data[i][6]*pre_invoice_data[i][3]}} ریال</td>
                                                                 </tr>
