change some section og getdata analayist from emalls and othe and it was save on db and read from db and then insert to it work for spped of this sectiuon and it work like update save then read every time

--- a/New_version/templates/IT/Get_data/index.html
+++ b/New_version/templates/IT/Get_data/index.html
@@ -53,26 +53,26 @@
                                                             <div class="nk-tb-col tb-col-sm">
                                                                 <span class="tb-product">
                                                                     <img src="./images/product/a.png" alt="" class="thumb" />
-                                                                    <span class="title"> {{i[0][1]}}</span>
+                                                                    <span class="title"> {{i[1]}}</span>
                                                                 </span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-sub">{{i[0][0]}}</span>
+                                                                <span class="tb-sub">{{i[0]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="{{i[0][2]}}"> {{i[1][0]}} تومان</a></span>
+                                                                <span class="tb-lead"><a href="{{i[0][2]}}"> {{i[7]}} تومان</a></span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="https://torob.com/p/{{i[0][3]}}">{{i[2][0]}} تومان</a></span>
+                                                                <span class="tb-lead"><a href="https://torob.com/p/{{i[0][3]}}">{{i[8]}} تومان</a></span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="https://www.digikala.com/product/dkp-{{i[0][4]}}/">{{i[3][0]}} تومان</a></span>
+                                                                <span class="tb-lead"><a href="https://www.digikala.com/product/dkp-{{i[0][4]}}/">{{i[9]}} تومان</a></span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-sub">{{i[4][0]}} تومان</span>
+                                                                <span class="tb-sub">{{i[10]}} تومان</span>
                                                             </div>
                                                             <div class="nk-tb-col tb-col-md">
-                                                                <span class="tb-sub">{{i[0][6]}}</span>
+                                                                <span class="tb-sub">{{i[6]}}</span>
                                                             </div>
 
                                                             <div class="nk-tb-col nk-tb-col-tools">
@@ -239,6 +239,9 @@
                                                 <a href="/IT/getdata" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
                                             </li>
 
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">آپدیت دیتا</span></a>
+                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
