--- a/New_version/templates/IT/Get_data/print.html
+++ b/New_version/templates/IT/Get_data/print.html
@@ -43,23 +43,23 @@
                                                             <div class="nk-tb-col tb-col-sm">
                                                                 <span class="tb-product">
                                                                     <img src="./images/product/a.png" alt="" class="thumb" />
-                                                                    <span class="title"> {{i[0][1]}}</span>
+                                                                    <span class="title"> {{i[1]}}</span>
                                                                 </span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-sub">{{i[0][0]}}</span>
+                                                                <span class="tb-sub">{{i[0]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="{{i[0][2]}}"> {{i[1][0]}} تومان</a></span>
+                                                                <span class="tb-lead"><a href="{{i[0][2]}}"> {{i[7]}} تومان</a></span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="https://torob.com/p/{{i[0][3]}}">{{i[2][0]}} تومان</a></span>
+                                                                <span class="tb-lead"><a href="https://torob.com/p/{{i[0][3]}}">{{i[8]}} تومان</a></span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="https://www.digikala.com/product/dkp-{{i[0][4]}}/">{{i[3][0]}} تومان</a></span>
+                                                                <span class="tb-lead"><a href="https://www.digikala.com/product/dkp-{{i[0][4]}}/">{{i[9]}} تومان</a></span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead">{{i[4][0]}} تومان</span>
+                                                                <span class="tb-lead">{{i[10]}} تومان</span>
                                                             </div>
 
 
