--- a/New_version/templates/IT/Pre_invoice/Pre_Invoice_add_customer.html
+++ b/New_version/templates/IT/Pre_invoice/Pre_Invoice_add_customer.html
@@ -152,7 +152,7 @@
 </div>
 {% endblock %}
 {% block menu %}
-                       <div class="nk-sidebar-content">
+                     <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -225,6 +225,9 @@
                                                 <a href="/IT/getdata" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
                                             </li>
 
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
+                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
