--- a/New_version/templates/IT/Ticket/index.html
+++ b/New_version/templates/IT/Ticket/index.html
@@ -231,6 +231,9 @@
                                             <li class="nk-menu-item">
                                                 <a href="/IT/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
                                             </li>
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
+                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
@@ -278,6 +281,9 @@
                                                 <a href="/IT/getdata" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
                                             </li>
 
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
+                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
