update menu section of it becuase add update_get_data_from emalls and other to menu

--- a/New_version/templates/IT/Pre_invoice/Pre_invoice_add_products.html
+++ b/New_version/templates/IT/Pre_invoice/Pre_invoice_add_products.html
@@ -158,7 +158,7 @@
 </div>
 {% endblock %}
 {% block menu %}
-                      <div class="nk-sidebar-content">
+                    <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -232,7 +232,7 @@
                                             </li>
 
                                             <li class="nk-menu-item">
-                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
+                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">آپدیت دیتا</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
