--- a/New_version/templates/IT/Ticket/index.html
+++ b/New_version/templates/IT/Ticket/index.html
@@ -282,7 +282,7 @@
                                             </li>
 
                                             <li class="nk-menu-item">
-                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
+                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">آپدیت دیتا</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
