--- a/New_version/templates/IT/Ticket/ticket_details.html
+++ b/New_version/templates/IT/Ticket/ticket_details.html
@@ -106,7 +106,7 @@
 {% endblock %}
 
 {% block menu %}
-                        <div class="nk-sidebar-content">
+                      <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -180,7 +180,7 @@
                                             </li>
 
                                             <li class="nk-menu-item">
-                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
+                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">آپدیت دیتا</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
