--- a/New_version/templates/IT/Customer/Add_customer_G.html
+++ b/New_version/templates/IT/Customer/Add_customer_G.html
@@ -162,7 +162,7 @@
 </div>
 {% endblock %}
 {% block menu %}
-                       <div class="nk-sidebar-content">
+                 <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -235,6 +235,9 @@
                                                 <a href="/IT/getdata" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
                                             </li>
 
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">آپدیت دیتا</span></a>
+                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
