--- a/New_version/templates/IT/Invoice/index.html
+++ b/New_version/templates/IT/Invoice/index.html
@@ -93,7 +93,7 @@
 {% endblock %}
 
 {% block menu %}
-                           <div class="nk-sidebar-content">
+                 <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -167,7 +167,7 @@
                                             </li>
 
                                             <li class="nk-menu-item">
-                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
+                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">آپدیت دیتا</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
