--- a/New_version/templates/IT/Pre_invoice/Pre_Invoice_add_customer.html
+++ b/New_version/templates/IT/Pre_invoice/Pre_Invoice_add_customer.html
@@ -152,7 +152,7 @@
 </div>
 {% endblock %}
 {% block menu %}
-                     <div class="nk-sidebar-content">
+                   <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -226,7 +226,7 @@
                                             </li>
 
                                             <li class="nk-menu-item">
-                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
+                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">آپدیت دیتا</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
