--- a/New_version/templates/IT/Ticket/ticket_add.html
+++ b/New_version/templates/IT/Ticket/ticket_add.html
@@ -135,7 +135,7 @@
 </div>
 {% endblock %}
 {% block menu %}
-                        <div class="nk-sidebar-content">
+                      <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -209,7 +209,7 @@
                                             </li>
 
                                             <li class="nk-menu-item">
-                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
+                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">آپدیت دیتا</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
