creat price history for emalls and others

--- a/New_version/templates/IT/Get_data/index.html
+++ b/New_version/templates/IT/Get_data/index.html
@@ -60,13 +60,13 @@
                                                                 <span class="tb-sub">{{i[0]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="{{i[0][2]}}"> {{i[7]}} تومان</a></span>
+                                                                <span class="tb-lead"><a href="{{i[2]}}"> {{i[7]}} تومان</a></span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="https://torob.com/p/{{i[0][3]}}">{{i[8]}} تومان</a></span>
+                                                                <span class="tb-lead"><a href="https://torob.com/p/{{i[3]}}">{{i[8]}} تومان</a></span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead"><a href="https://www.digikala.com/product/dkp-{{i[0][4]}}/">{{i[9]}} تومان</a></span>
+                                                                <span class="tb-lead"><a href="https://www.digikala.com/product/dkp-{{i[4]}}/">{{i[9]}} تومان</a></span>
                                                             </div>
                                                             <div class="nk-tb-col">
                                                                 <span class="tb-sub">{{i[10]}} تومان</span>
