creat a section for charts of data analist

--- a/New_version/templates/IT/Get_data/index.html
+++ b/New_version/templates/IT/Get_data/index.html
@@ -83,7 +83,10 @@
                                                                             <div class="dropdown-menu dropdown-menu-end">
                                                                                 <ul class="link-list-opt no-bdr">
                                                                                     <li>
-                                                                                        <a href="/IT/delet_linksgetdata?id={{i[0][0]}}"><em class="icon ni ni-trash"></em><span>حذف محصول</span></a>
+                                                                                        <a href="/IT/delet_linksgetdata?id={{i[0]}}"><em class="icon ni ni-trash"></em><span>حذف محصول</span></a>
+                                                                                    </li>
+                                                                                    <li>
+                                                                                        <a href="/IT/chart_data_price?id={{i[0]}}"><em class="icon ni ni-bar-chart-alt"></em><span>نمودار محصول</span></a>
                                                                                     </li>
                                                                                 </ul>
                                                                             </div>
